# pct

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
benches/: bench.rs
examples/: encode.rs  str.rs  string.rs
src/: error.rs  lib.rs  nsized.rs  scan.rs  sized.rs  util.rs
src/encoder/: iri.rs  mod.rs  uri.rs
