[package]
name = "pct-str"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
categories = ["web-programming", "encoding"]
keywords = ["percent", "percent-encoded", "encode", "decode", "string"]
description = "Percent-encoded strings for URL, URI, IRI, etc."
repository = "https://github.com/timothee-haudebourg/pct-str"
documentation = "https://docs.rs/pct-str"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85.1"
version = "3.0.0"

[features]
default = ["std"]
std = ["utf8-decode/std"]

[dependencies]
utf8-decode = { version = "2.0.0", default-features = false }
thiserror = "1.0.40"