[package]
name = "pct"
description = "Percent-encoded strings for URL, URI, IRI, etc."
version = "4.0.0"
edition = "2024"
rust-version = "1.85.0"
authors = [
    "Timothée Haudebourg <author@haudebourg.net>",
    "Matej Škvarč <matej.skvarc@senlab.io>",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mskvarc/pct/"
keywords = ["percent", "percent-encoded", "encode", "decode", "string"]
categories = ["web-programming", "encoding"]
autobenches = false

[features]
default = ["std", "memchr"]
std = ["utf8-decode/std"]
memchr = ["dep:memchr"]
# Portable-SIMD scanner. Requires nightly rustc (enables `portable_simd`).
simd = []

[dependencies]
utf8-decode = { version = "2.0.0", default-features = false }
memchr = { version = "2.8.0", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "bench"
harness = false
